--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -54,8 +54,8 @@ nav .menu ul{
 }
 
 nav .menu ul li{
-    font-size: 19px;
-    font-weight: 500;
+    font-size: 16px;
+    font-weight: 400;
     color: black;
 }
 
@@ -82,8 +82,8 @@ nav .menu ul li{
   gap: 10px;
   padding: 12px 18px;
   border-radius: 5px;
-  font-weight: 700;
-  font-size: 14px;
+  font-weight: 600;
+  font-size: 16px;
   border: 1px solid transparent;
   transition: 180ms ease;
   user-select: none;
@@ -135,7 +135,14 @@ nav .menu ul li{
     color: #30B868;
 }
 .dot{
-    border: none;
+    border: 1px solid #30B868;
+    border-radius: 30px;
+    background: #30B868;
+    height: 12px;
+    width: 12px;
+    display: block;
+    align-items: center;
+    margin: 2px 5px 0px 0px;
     
 }
 .notes{
@@ -173,7 +180,7 @@ nav .menu ul li{
 
 .notes-card {
     /* border: 1px solid red; */
-    color: #ffffff;
+    background: #ffffff;
     width: 322px;
     flex: 1;
 }
