hero button correction

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,10 +18,6 @@ body{
      /* border: 1px solid red; */
      padding: 0;
 }
-h1{
-    font-size: 72px;
-    font-weight: bold;
-}
 
 header{
     background-color: #ffffff;
@@ -101,23 +97,39 @@ nav .menu ul li{
     padding: 116px 120px 180px 120px;
 }
 .hero-title{
-    gap: 16px;
+    margin-top: 16px;
 }
+.hero-title h1{
+    font-size: 72px;
+    font-weight: bold;
+}
+
 .hero-container{
     text-align: center;
     color: white;
     max-height: 380px;
 }
 .hero-paragraph  {
-    padding-bottom: 16px;
+    margin: 16px 0px 16px 0px;
+    /* margin-bottom: 16px; */
 }
 .hero-paragraph p{
-    line-height: 24px;
+    line-height: 36px;
+    font-size: 18px;
+    
+    
 }
 .hero-btn{
     
     display: inline-flex;
     gap: 16px;
+}
+
+.play-btn{
+    background: transparent;
+    border: 1px solid #ffffff;
+    font-size: 16px;
+    font-weight: 600;
 }
 .early-access{
     color: green;
